--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@environment/*": ["./src/environments/*"],
+      "@heroInterface/*": ["./src/app/heroes/interfaces/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
